--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,9 +1,9 @@
 @import './basicLightbox.min.css';
 
-$accent-color: #e5f321;
+$accent-color: #77c27b;
 $btn-color: #ffffff;
 $input-color: #ffffff;
-$btn-hover-bgcolor: #bbf3d9;
+$btn-hover-bgcolor: #3e8363;
 
 h1,
 h2,
@@ -36,7 +36,7 @@ body {
   font-style: italic;
   color: rgb(255, 255, 255);
   font-weight: 500;
-  background-color: #33f0b1;
+  background-color: #268dd1;
   background-size: cover;
 }
 
